[gd_scene load_steps=3 format=3 uid="uid://dkurtulus_campaign_selection"]

[ext_resource type="Script" path="res://scenes/campaign_selection/campaign_selection.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/alfabet98.ttf" id="2_font"]

[node name="CampaignSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0196078, 0.0196078, 1)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 1

[node name="Header" type="MarginContainer" parent="UILayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Header"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UILayer/Header/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 56
text = "Select Campaign"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="UILayer/Header/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 0.9)
theme_override_font_sizes/font_size = 22
text = "Turkish War of Independence, 1919-1923"
horizontal_alignment = 1

[node name="CampaignsContainer" type="HBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = -220.0
offset_right = 620.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="BackButton" type="Button" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Back"
flat = true

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="FadeRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
